force-app/main/default/objects/Apex_Factory_Configuration__mdt/Apex_Factory_Configuration__mdt.object-meta.xml
<CustomObject>
    <description>Used by Factory classes to instantiate concrete versions of interfaces based on the configured Apex class name.</description>
    <label>Apex Factory Configuration</label>
    <pluralLabel>Apex Factory Configurations</pluralLabel>
</CustomObject>