force-app/main/default/objects/Apex_Factory_Configuration__mdt/fields/Configuration_Name__c.field-meta.xml
<CustomField>
    <fullName>Configuration_Name__c</fullName>
    <description>Used to query configurations by use case. Do not want to use a unique value such as DeveloperName to allow for test configurations. Can be the same value as DeveloperName.</description>
    <label>Configuration Name</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
</CustomField>