force-app/main/default/objects/Apex_Factory_Configuration__mdt/fields/Is_Test_Visible__c.field-meta.xml
<CustomField>
    <fullName>Is_Test_Visible__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used to differentiate configurations used for testing.</description>
    <label>Is Test Visible</label>
    <type>Checkbox</type>
</CustomField>