force-app/main/default/objects/Apex_Factory_Configuration__mdt/fields/Sort_Position__c.field-meta.xml
<CustomField>
    <fullName>Sort_Position__c</fullName>
    <description>Relative position at which this plugin will be sorted if multiple results returned in registry.lookupAll method.</description>
    <inlineHelpText>Relative position at which this plugin will be sorted if multiple results returned in registry.lookupAll method.</inlineHelpText>
    <label>Sort Position</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>