force-app/main/default/objects/Apex_Factory_Configuration__mdt/fields/Test_Case__c.field-meta.xml
<CustomField>
    <fullName>Test_Case__c</fullName>
    <description>Used to designate specific test cases. Leave blank for production use.</description>
    <inlineHelpText>Used to designate specific test cases. Leave blank for production use.</inlineHelpText>
    <label>Test Case</label>
    <length>80</length>
    <type>Text</type>
</CustomField>